<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/date"
        android:layout_alignTop="@+id/edtCost"
        android:text="@string/cost"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/edtCost"
        android:layout_width="209dp"
        android:layout_height="34dp"
        android:layout_above="@+id/txtDate"
        android:layout_alignStart="@+id/txtDate"
        android:layout_marginBottom="32dp"
        android:background="@drawable/shape_background"
        android:hint="0"
        android:inputType="number"
        android:maxLines="1"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/category"
        android:layout_alignTop="@+id/txtDate"
        android:text="@string/date"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="209dp"
        android:layout_height="34dp"
        android:layout_above="@+id/edtCategory"
        android:layout_alignStart="@+id/edtCategory"
        android:layout_marginBottom="32dp"
        android:background="@drawable/shape_background"
        android:ems="5"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/subCategory"
        android:layout_alignTop="@+id/edtCategory"
        android:text="@string/select_category"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/edtCategory"
        android:layout_width="209dp"
        android:layout_height="34dp"
        android:layout_above="@+id/edtSubCategory"
        android:layout_alignStart="@+id/edtSubCategory"
        android:layout_marginBottom="32dp"
        android:background="@drawable/shape_background"
        android:textSize="20sp"/>


    <TextView
        android:id="@+id/subCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/comment"
        android:layout_alignTop="@+id/edtSubCategory"
        android:text="@string/select_small_category"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/edtSubCategory"
        android:layout_width="209dp"
        android:layout_height="34dp"
        android:layout_above="@+id/comment"
        android:layout_alignStart="@+id/edtComment"
        android:layout_marginBottom="32dp"
        android:background="@drawable/shape_background"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/edtComment"
        android:layout_marginStart="32dp"
        android:text="@string/remark"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/edtComment"
        android:layout_width="209dp"
        android:layout_height="34dp"
        android:layout_above="@+id/btnSave"
        android:layout_alignStart="@+id/btnSave"
        android:layout_marginBottom="90dp"
        android:background="@drawable/shape_background"
        android:ems="5"
        android:hint="@string/add_remark"
        android:maxLines="2"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="125dp"
        android:text="儲存"/>


</RelativeLayout>